--- a/css/style.css
+++ b/css/style.css
@@ -32,4 +32,43 @@ html{
     padding:0;
   }
 
+  .top{
+    background:url("../images/5.jpg");
+    width:100%;
+    height:50vh;
+  }
+
+  .inner-top{
+    width:50%;
+    height:50vh;
+    background:rgb(190,198,201);
+    margin-top:0;
+    padding:0;
+    display:flex;
+  align-items:center;
+  justify-content: center;
+  flex-direction: column;
+  }
+  .bottom{
+    background:rgb(190,198,201);
+    width:100%;
+    height:50vh;
+    display:flex;
+  }
+  .inner-bottom{
+    width:50%;
+    height:50vh;
+    background:url("../images/7.jpg");
+  }
+
+  .inner-bottom-right{
+    width:50%;
+    height:50vh;
+    align-items:center;
+    justify-content: center;
+    display:flex;
+    flex-direction: column;
+
+  }
+
   
