--- a/css/style.css
+++ b/css/style.css
@@ -71,4 +71,37 @@ html{
 
   }
 
+  p{
+    margin:0;
+    padding:0;
+    text-align: center;
+  }
+  img{
+    width:100%;
+    height:100vh;
+    opacity:1;
+  }
+  
+  #signin{
+   /* margin-top:75px;*/
+    font-size:45px;
+    text-align: center;
+    color: rgb(46, 44, 44);
+    padding-top:15%;
+    letter-spacing: 3px;
+    font-family: 'Cinzel', serif;
+  }
+  
+  #account{
+    /*margin-left:14.5em;*/
+    text-align:center;
+    color: rgb(46, 44, 44);
+    font-family: 'PT Serif', serif;
+  }
+  
+  h2{
+    padding:0;
+    margin:0;
+  }
+
   
