--- a/css/baseStyle.css
+++ b/css/baseStyle.css
@@ -79,3 +79,55 @@ body{
 }
 
 
+.box{
+    width:80%;
+    height:100vh;
+    background:transparent;
+    margin-right:10%;
+    border:none;
+    border-radius:5px;
+    margin-top:25px;
+    box-sizing:border-box;
+   }
+   
+   .table{
+       margin-right:auto;
+       margin-left:auto;
+       border-radius: 10px;
+   }
+   
+   tr{
+       width:33%;
+       border-radius: 10px;
+   }
+   
+   th{
+       text-align: center;
+       border-radius: 10px;
+   }
+   label{
+       margin-left:27%;
+       color:rgb(34, 33, 33);
+   }
+   
+   .input-sm{
+       border-radius: 4px;
+       margin-left:5px;
+       margin-right:5px;
+   }
+   
+   .table-back{
+       background:url("../images/5.jpg");
+       margin-top:30px;
+       text-align: center;
+       max-width:90%;
+   }
+   
+   .dataTables_info{
+       margin-left:30%;
+   }
+   
+   .content{
+       background:pink;
+   }
+   
