--- a/css/baseStyle.css
+++ b/css/baseStyle.css
@@ -57,7 +57,7 @@ body{
     font-size: 10px;
     margin-top:auto;
     margin-bottom:auto;
-    width:70%;
+    /*width:70%;*/
 }
 
 #insert:hover{
@@ -75,7 +75,7 @@ body{
     font-size: 10px;
     margin-top:auto;
     margin-bottom:auto;
-    width:50%;
+    /*width:50%;*/
 }
 
 
@@ -128,6 +128,6 @@ body{
    }
    
    .content{
-       background:pink;
+       background:rgb(153,164,155)!important;
    }
    
