--- a/css/style.css
+++ b/css/style.css
@@ -184,4 +184,46 @@ html{
     font-family: 'PT Serif', serif;
   }
 
+  /*MEDIA QUERIES START HERE*/
+  @media screen and (max-width:1040px){
+    p{
+      font-size: 17px;
+    }
+    .btn{
+      margin-left:35%;
+    }
+
+  }
+  @media screen and (max-width:780px){
+    .wrap{
+      display:none;
+    }
+    .container{
+      width:100%;
+    }
+  }
+
+  @media screen and (max-width:500px){
+   #signin{
+     font-size: 1.5em;
+   }
+   #account{
+     font-size: 17px;
+   }
+   .input-group input{
+     display:flex;
+     justify-content:center;
+     align-items: center;
+     margin:0;
+     font-size: 15px;
+   }
+   #member{
+     margin-left:0;
+     font-size: 15px;
+   }
+   .btn{
+     margin-left:20%;
+     margin-right:20%;
+   }
+  }
   
