--- a/css/register.css
+++ b/css/register.css
@@ -45,9 +45,9 @@
       margin-top:0;
       padding:0;
       display:flex;
-    align-items:center;
-    justify-content: center;
-    flex-direction: column;
+      align-items:center;
+      justify-content: center;
+      flex-direction: column;
     }
     .bottom{
       background:rgb(190,198,201);
@@ -180,4 +180,47 @@
       border-radius: 5px;
     }
   
-    
+    /*MEDIA QUERIES HERE*/
+    @media screen and (max-width:1040px){
+      p{
+        font-size: 17px;
+      }
+      .btn{
+        margin-left:35%;
+      }
+  
+    }
+    @media screen and (max-width:780px){
+      .wrap{
+        display:none;
+      }
+      .container{
+        width:100%;
+      }
+      #register{
+        font-size: 36px;
+      }
+    }
+    @media screen and (max-width:500px){
+      #register{
+        font-size: 1.5em;
+      }
+      #account{
+        font-size: 17px;
+      }
+      .input-group input{
+        display:flex;
+        justify-content:center;
+        align-items: center;
+        margin:0;
+        font-size: 15px;
+      }
+      #member{
+        margin-left:0;
+        font-size: 15px;
+      }
+      .btn{
+        margin-left:20%;
+        margin-right:20%;
+      }
+     }
