--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html{
     max-width: 100%;
     font-family: 'PT Serif', serif;
   }
-
+/*styling for both login and register*/
   .container{
     float:right;
     width:55%;
@@ -103,7 +103,7 @@ html{
     padding:0;
     margin:0;
   }
-
+/*Styling for the login and sign in form*/
   form, .content {
     width: 70%;
     margin: 0px auto;
@@ -151,6 +151,8 @@ html{
     margin-left:50px;
     font-family: 'PT Serif', serif;
   }
+
+  /*buttons*/
   .error {
     width: 70%; 
     margin: 0px auto; 
@@ -183,6 +185,32 @@ html{
     font-size: 20px;
     font-family: 'PT Serif', serif;
   }
+  #register{
+    /* margin-top:75px;*/
+     font-size:45px;
+     text-align: center;
+     color: rgb(46, 44, 44);
+     padding-top:15%;
+     letter-spacing: 3px;
+     font-family: 'Cinzel', serif;
+   }
+   
+   
+   /*ONCE LOGGED IN*/
+   .header {
+     width: 100%;
+     /*height:50px;*/
+     top:0;
+     margin:0;
+     color: white;
+     background: transparent;
+     text-align: center;
+     border: none;
+     border-bottom: none;
+     padding:0;
+     background:rgb(142,163,133);
+   }
+ 
 
   /*****************************************MEDIA QUERIES START HERE*****************************************/
   @media screen and (max-width:1040px){
@@ -207,12 +235,18 @@ html{
     #signin{
       font-size:36px;
     }
+    #register{
+      font-size: 36px;
+    }
   }
 
   @media screen and (max-width:500px){
    #signin{
      font-size: 1.5em;
    }
+   #register{
+    font-size: 1.5em;
+  }
    #account{
      font-size: 17px;
    }
